# logcat-colorize-rs

./: Cargo.toml  README.md
.github/workflows/: releaser.yaml
src/: ansi.rs  logcat.rs  main.rs  theme.rs
