[package]
name = "logcat-colorize"
version = "0.2.0"
authors = ["chmouel <chmouel@chmouel.com>"]
description = "Command that takes adb logcat from stdin and produces formatted colorized to stdout, written in Rust"
license = "Apache-2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
regex = "1.12.2"
